cmake_minimum_required(VERSION 3.17)

include_directories(D:/3rdlibs/include)

add_executable(example_format example_format.cpp)

add_executable(example_iostreams example_iostreams.cpp)

add_executable(example_lexical_cast example_lexical_cast.cpp)

add_executable(example_tokenizer example_tokenizer.cpp)

